MDEV-36133 BNL() hint doesn't work with join_cache_level>=5